@@ -5,6 +5,8 @@ Fixed a bug regarding unicode strings.
 
 Some minor changes (typos and similar things) have been done.
 
+The Plugins Manager has been debugged.
+
 ** October 02, 2013 **
 The package preferences has been analyzed with pylint.
 
